force-app/main/default/objects/Books__c/fields/About_Author__c.field-meta.xml
<CustomField>
    <fullName>About_Author__c</fullName>
    <label>About Author</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>