force-app/main/default/objects/Books__c/fields/About_Book__c.field-meta.xml
<CustomField>
    <fullName>About_Book__c</fullName>
    <label>About Book</label>
    <length>20</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>