force-app/main/default/objects/Books__c/fields/Author_Name__c.field-meta.xml
<CustomField>
    <fullName>Author_Name__c</fullName>
    <label>Author Name</label>
    <type>TextArea</type>
</CustomField>