force-app/main/default/objects/Books__c/fields/Authors_Country__c.field-meta.xml
<CustomField>
    <fullName>Authors_Country__c</fullName>
    <label>Authors Country</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>