force-app/main/default/objects/Books__c/fields/Available_in__c.field-meta.xml
<CustomField>
    <fullName>Available_in__c</fullName>
    <label>Available in</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>online</fullName>
            </value>
            <value>
                <fullName>Store</fullName>
            </value>
            <value>
                <fullName>Library</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>