force-app/main/default/objects/Books__c/fields/Available_Place__c.field-meta.xml
<CustomField>
    <fullName>Available_Place__c</fullName>
    <label>Available Place</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>