force-app/main/default/objects/Books__c/fields/Book_Price__c.field-meta.xml
<CustomField>
    <fullName>Book_Price__c</fullName>
    <label>Book Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>