force-app/main/default/objects/Books__c/fields/Final_price__c.field-meta.xml
<CustomField>
    <fullName>Final_price__c</fullName>
    <formula>Book_Price__c - ( Book_Price__c *  Discount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>