force-app/main/default/objects/Books__c/fields/List_Of_Contents__c.field-meta.xml
<CustomField>
    <fullName>List_Of_Contents__c</fullName>
    <label>List Of Contents</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>