force-app/main/default/objects/Books__c/recordTypes/non_tech.recordType-meta.xml
<RecordType>
    <fullName>non_tech</fullName>
    <active>true</active>
    <label>non tech</label>
</RecordType>