force-app/main/default/objects/Books__c/recordTypes/technical.recordType-meta.xml
<RecordType>
    <fullName>technical</fullName>
    <active>true</active>
    <label>technical</label>
</RecordType>